# Linux-Observability-Toolkit

./: .gitignore  Dockerfile  README.md  build-and-run.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/services/: nginx.yaml  postgresql.yaml
monitoring/: README.md  grafana-dashboard.json  prometheus-alerts.yml
runbooks/: deploy.md  incident-playbook.md  rollback.md
toolkit/: __init__.py  __main__.py  cli.py  main.py  metrics.py  version.py
toolkit/collectors/: __init__.py  hardening.py  journald.py  process.py  resource.py  systemd.py
toolkit/core/: __init__.py  bundle.py  config.py  runner.py
