[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux-observability-toolkit"
version = "0.1.0"
description = "Linux incident data collection toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
toolkit = "toolkit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
